parser.output
Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt stmt_list
    2          | LBRACE stmt_list RBRACE stmt_list
    3          | /* empty */

    4 stmt: if_stmt
    5     | while_stmt
    6     | repeat_stmt
    7     | for_stmt
    8     | switch_stmt
    9     | func_decl
   10     | var_decl
   11     | const_decl
   12     | assignment_stmt
   13     | expr SEMICOLON
   14     | return_stmt SEMICOLON
   15     | BREAK SEMICOLON
   16     | CONTINUE SEMICOLON

   17 return_stmt: RETURN
   18            | RETURN TERM
   19            | RETURN expr

   20 if_stmt: IF LPAREN expr RPAREN LBRACE stmt_list RBRACE
   21        | IF LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE

   22 while_stmt: WHILE LPAREN expr RPAREN LBRACE stmt_list RBRACE

   23 repeat_stmt: REPEAT LBRACE stmt_list RBRACE UNTIL LPAREN expr RPAREN SEMICOLON

   24 for_stmt: FOR LPAREN var_decl expr SEMICOLON IDENTIFIER ASSIGN expr RPAREN LBRACE stmt_list RBRACE

   25 switch_stmt: SWITCH LPAREN expr RPAREN LBRACE case_list RBRACE

   26 case_list: CASE expr COLON stmt_list case_list
   27          | CASE TERM COLON stmt_list case_list
   28          | CASE expr COLON stmt_list
   29          | CASE TERM COLON stmt_list
   30          | DEFAULT COLON stmt_list

   31 func_decl: DATATYPE IDENTIFIER LPAREN dec_param_list RPAREN LBRACE stmt_list RBRACE
   32          | DATATYPE IDENTIFIER LPAREN dec_param_list RPAREN SEMICOLON

   33 func_call: IDENTIFIER LPAREN call_param_list RPAREN
   34          | IDENTIFIER LPAREN RPAREN

   35 dec_param_list: DATATYPE IDENTIFIER COMMA dec_param_list
   36               | DATATYPE IDENTIFIER

   37 call_param_list: expr COMMA call_param_list
   38                | expr
   39                | TERM COMMA call_param_list
   40                | TERM

   41 var_decl: DATATYPE IDENTIFIER SEMICOLON
   42         | DATATYPE IDENTIFIER ASSIGN TERM SEMICOLON
   43         | DATATYPE IDENTIFIER ASSIGN expr SEMICOLON

   44 const_decl: CONST DATATYPE IDENTIFIER ASSIGN TERM SEMICOLON

   45 assignment_stmt: IDENTIFIER ASSIGN TERM SEMICOLON
   46                | IDENTIFIER ASSIGN expr SEMICOLON

   47 expr: expr EQ IDENTIFIER
   48     | expr NEQ IDENTIFIER
   49     | expr LT IDENTIFIER
   50     | expr GT IDENTIFIER
   51     | expr LEQ IDENTIFIER
   52     | expr GEQ IDENTIFIER
   53     | expr DIVIDE IDENTIFIER
   54     | expr TIMES IDENTIFIER
   55     | expr MINUS IDENTIFIER
   56     | expr PLUS IDENTIFIER
   57     | UNARY IDENTIFIER
   58     | IDENTIFIER UNARY
   59     | expr PLUS TERM
   60     | expr MINUS TERM
   61     | expr TIMES TERM
   62     | expr DIVIDE TERM
   63     | expr EQ TERM
   64     | expr NEQ TERM
   65     | expr LT TERM
   66     | expr GT TERM
   67     | expr LEQ TERM
   68     | expr GEQ TERM
   69     | expr POWER TERM
   70     | expr AND TERM
   71     | expr OR TERM
   72     | NOT TERM
   73     | LPAREN expr RPAREN
   74     | expr PLUS LPAREN expr RPAREN
   75     | expr MINUS LPAREN expr RPAREN
   76     | expr TIMES LPAREN expr RPAREN
   77     | expr DIVIDE LPAREN expr RPAREN
   78     | expr EQ LPAREN expr RPAREN
   79     | expr NEQ LPAREN expr RPAREN
   80     | expr LT LPAREN expr RPAREN
   81     | expr GT LPAREN expr RPAREN
   82     | expr LEQ LPAREN expr RPAREN
   83     | expr GEQ LPAREN expr RPAREN
   84     | expr POWER LPAREN expr RPAREN
   85     | expr AND LPAREN expr RPAREN
   86     | expr OR LPAREN expr RPAREN
   87     | NOT LPAREN expr RPAREN
   88     | IDENTIFIER
   89     | func_call

   90 TERM: NUMBER
   91     | TRUE
   92     | FALSE
   93     | CHARACTER_LITERAL
   94     | STRING_LITERAL
   95     | FLOATING_NUMBER

   96 DATATYPE: INT
   97         | BOOL
   98         | CHAR
   99         | STRING
  100         | FLOAT
  101         | VOID


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 90
FLOATING_NUMBER (259) 95
STRING_LITERAL (260) 94
IDENTIFIER (261) 24 31 32 33 34 35 36 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 88
CHARACTER_LITERAL (262) 93
TRUE (263) 91
FALSE (264) 92
COMMA (265) 35 37 39
IF (266) 20 21
ELSE (267) 21
WHILE (268) 22
REPEAT (269) 23
UNTIL (270) 23
FOR (271) 24
SWITCH (272) 25
CASE (273) 26 27 28 29
BREAK (274) 15
CONTINUE (275) 16
CONST (276) 44
INT (277) 96
FLOAT (278) 100
BOOL (279) 97
STRING (280) 99
CHAR (281) 98
VOID (282) 101
RETURN (283) 17 18 19
DEFAULT (284) 30
EQ (285) 47 63 78
NEQ (286) 48 64 79
LT (287) 49 65 80
GT (288) 50 66 81
LEQ (289) 51 67 82
GEQ (290) 52 68 83
PLUS (291) 56 59 74
MINUS (292) 55 60 75
TIMES (293) 54 61 76
DIVIDE (294) 53 62 77
ASSIGN (295) 24 42 43 44 45 46
LPAREN (296) 20 21 22 23 24 25 31 32 33 34 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 87
RPAREN (297) 20 21 22 23 24 25 31 32 33 34 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 87
LBRACE (298) 2 20 21 22 23 24 25 31
RBRACE (299) 2 20 21 22 23 24 25 31
SEMICOLON (300) 13 14 15 16 23 24 32 41 42 43 44 45 46
COLON (301) 26 27 28 29 30
POWER (302) 69 84
UNARY (303) 57 58
AND (304) 70 85
OR (305) 71 86
NOT (306) 72 87
UMINUS (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
stmt_list (54)
    on left: 1 2 3, on right: 0 1 2 20 21 22 23 24 26 27 28 29 30 31
stmt (55)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16, on right: 1
return_stmt (56)
    on left: 17 18 19, on right: 14
if_stmt (57)
    on left: 20 21, on right: 4
while_stmt (58)
    on left: 22, on right: 5
repeat_stmt (59)
    on left: 23, on right: 6
for_stmt (60)
    on left: 24, on right: 7
switch_stmt (61)
    on left: 25, on right: 8
case_list (62)
    on left: 26 27 28 29 30, on right: 25 26 27
func_decl (63)
    on left: 31 32, on right: 9
func_call (64)
    on left: 33 34, on right: 89
dec_param_list (65)
    on left: 35 36, on right: 31 32 35
call_param_list (66)
    on left: 37 38 39 40, on right: 33 37 39
var_decl (67)
    on left: 41 42 43, on right: 10 24
const_decl (68)
    on left: 44, on right: 11
assignment_stmt (69)
    on left: 45 46, on right: 12
expr (70)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
    86 87 88 89, on right: 13 19 20 21 22 23 24 25 26 28 37 38 43 46
    47 48 49 50 51 52 53 54 55 56 59 60 61 62 63 64 65 66 67 68 69
    70 71 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
TERM (71)
    on left: 90 91 92 93 94 95, on right: 18 27 29 39 40 42 44 45 59
    60 61 62 63 64 65 66 67 68 69 70 71 72
DATATYPE (72)
    on left: 96 97 98 99 100 101, on right: 31 32 35 36 41 42 43 44


state 0

    0 $accept: . stmt_list $end

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    REPEAT      shift, and go to state 4
    FOR         shift, and go to state 5
    SWITCH      shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    CONST       shift, and go to state 9
    INT         shift, and go to state 10
    FLOAT       shift, and go to state 11
    BOOL        shift, and go to state 12
    STRING      shift, and go to state 13
    CHAR        shift, and go to state 14
    VOID        shift, and go to state 15
    RETURN      shift, and go to state 16
    LPAREN      shift, and go to state 17
    LBRACE      shift, and go to state 18
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    $default  reduce using rule 3 (stmt_list)

    stmt_list        go to state 21
    stmt             go to state 22
    return_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    repeat_stmt      go to state 26
    for_stmt         go to state 27
    switch_stmt      go to state 28
    func_decl        go to state 29
    func_call        go to state 30
    var_decl         go to state 31
    const_decl       go to state 32
    assignment_stmt  go to state 33
    expr             go to state 34
    DATATYPE         go to state 35


state 1

   33 func_call: IDENTIFIER . LPAREN call_param_list RPAREN
   34          | IDENTIFIER . LPAREN RPAREN
   45 assignment_stmt: IDENTIFIER . ASSIGN TERM SEMICOLON
   46                | IDENTIFIER . ASSIGN expr SEMICOLON
   58 expr: IDENTIFIER . UNARY
   88     | IDENTIFIER .

    ASSIGN  shift, and go to state 36
    LPAREN  shift, and go to state 37
    UNARY   shift, and go to state 38

    $default  reduce using rule 88 (expr)


state 2

   20 if_stmt: IF . LPAREN expr RPAREN LBRACE stmt_list RBRACE
   21        | IF . LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE

    LPAREN  shift, and go to state 39


state 3

   22 while_stmt: WHILE . LPAREN expr RPAREN LBRACE stmt_list RBRACE

    LPAREN  shift, and go to state 40


state 4

   23 repeat_stmt: REPEAT . LBRACE stmt_list RBRACE UNTIL LPAREN expr RPAREN SEMICOLON

    LBRACE  shift, and go to state 41


state 5

   24 for_stmt: FOR . LPAREN var_decl expr SEMICOLON IDENTIFIER ASSIGN expr RPAREN LBRACE stmt_list RBRACE

    LPAREN  shift, and go to state 42


state 6

   25 switch_stmt: SWITCH . LPAREN expr RPAREN LBRACE case_list RBRACE

    LPAREN  shift, and go to state 43


state 7

   15 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 44


state 8

   16 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 45


state 9

   44 const_decl: CONST . DATATYPE IDENTIFIER ASSIGN TERM SEMICOLON

    INT     shift, and go to state 10
    FLOAT   shift, and go to state 11
    BOOL    shift, and go to state 12
    STRING  shift, and go to state 13
    CHAR    shift, and go to state 14
    VOID    shift, and go to state 15

    DATATYPE  go to state 46


state 10

   96 DATATYPE: INT .

    $default  reduce using rule 96 (DATATYPE)


state 11

  100 DATATYPE: FLOAT .

    $default  reduce using rule 100 (DATATYPE)


state 12

   97 DATATYPE: BOOL .

    $default  reduce using rule 97 (DATATYPE)


state 13

   99 DATATYPE: STRING .

    $default  reduce using rule 99 (DATATYPE)


state 14

   98 DATATYPE: CHAR .

    $default  reduce using rule 98 (DATATYPE)


state 15

  101 DATATYPE: VOID .

    $default  reduce using rule 101 (DATATYPE)


state 16

   17 return_stmt: RETURN .
   18            | RETURN . TERM
   19            | RETURN . expr

    NUMBER             shift, and go to state 47
    FLOATING_NUMBER    shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    IDENTIFIER         shift, and go to state 50
    CHARACTER_LITERAL  shift, and go to state 51
    TRUE               shift, and go to state 52
    FALSE              shift, and go to state 53
    LPAREN             shift, and go to state 17
    UNARY              shift, and go to state 19
    NOT                shift, and go to state 20

    $default  reduce using rule 17 (return_stmt)

    func_call  go to state 30
    expr       go to state 54
    TERM       go to state 55


state 17

   73 expr: LPAREN . expr RPAREN

    IDENTIFIER  shift, and go to state 50
    LPAREN      shift, and go to state 17
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    func_call  go to state 30
    expr       go to state 56


state 18

    2 stmt_list: LBRACE . stmt_list RBRACE stmt_list

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    REPEAT      shift, and go to state 4
    FOR         shift, and go to state 5
    SWITCH      shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    CONST       shift, and go to state 9
    INT         shift, and go to state 10
    FLOAT       shift, and go to state 11
    BOOL        shift, and go to state 12
    STRING      shift, and go to state 13
    CHAR        shift, and go to state 14
    VOID        shift, and go to state 15
    RETURN      shift, and go to state 16
    LPAREN      shift, and go to state 17
    LBRACE      shift, and go to state 18
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    $default  reduce using rule 3 (stmt_list)

    stmt_list        go to state 57
    stmt             go to state 22
    return_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    repeat_stmt      go to state 26
    for_stmt         go to state 27
    switch_stmt      go to state 28
    func_decl        go to state 29
    func_call        go to state 30
    var_decl         go to state 31
    const_decl       go to state 32
    assignment_stmt  go to state 33
    expr             go to state 34
    DATATYPE         go to state 35


state 19

   57 expr: UNARY . IDENTIFIER

    IDENTIFIER  shift, and go to state 58


state 20

   72 expr: NOT . TERM
   87     | NOT . LPAREN expr RPAREN

    NUMBER             shift, and go to state 47
    FLOATING_NUMBER    shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    CHARACTER_LITERAL  shift, and go to state 51
    TRUE               shift, and go to state 52
    FALSE              shift, and go to state 53
    LPAREN             shift, and go to state 59

    TERM  go to state 60


state 21

    0 $accept: stmt_list . $end

    $end  shift, and go to state 61


state 22

    1 stmt_list: stmt . stmt_list

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    REPEAT      shift, and go to state 4
    FOR         shift, and go to state 5
    SWITCH      shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    CONST       shift, and go to state 9
    INT         shift, and go to state 10
    FLOAT       shift, and go to state 11
    BOOL        shift, and go to state 12
    STRING      shift, and go to state 13
    CHAR        shift, and go to state 14
    VOID        shift, and go to state 15
    RETURN      shift, and go to state 16
    LPAREN      shift, and go to state 17
    LBRACE      shift, and go to state 18
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    $default  reduce using rule 3 (stmt_list)

    stmt_list        go to state 62
    stmt             go to state 22
    return_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    repeat_stmt      go to state 26
    for_stmt         go to state 27
    switch_stmt      go to state 28
    func_decl        go to state 29
    func_call        go to state 30
    var_decl         go to state 31
    const_decl       go to state 32
    assignment_stmt  go to state 33
    expr             go to state 34
    DATATYPE         go to state 35


state 23

   14 stmt: return_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 63


state 24

    4 stmt: if_stmt .

    $default  reduce using rule 4 (stmt)


state 25

    5 stmt: while_stmt .

    $default  reduce using rule 5 (stmt)


state 26

    6 stmt: repeat_stmt .

    $default  reduce using rule 6 (stmt)


state 27

    7 stmt: for_stmt .

    $default  reduce using rule 7 (stmt)


state 28

    8 stmt: switch_stmt .

    $default  reduce using rule 8 (stmt)


state 29

    9 stmt: func_decl .

    $default  reduce using rule 9 (stmt)


state 30

   89 expr: func_call .

    $default  reduce using rule 89 (expr)


state 31

   10 stmt: var_decl .

    $default  reduce using rule 10 (stmt)


state 32

   11 stmt: const_decl .

    $default  reduce using rule 11 (stmt)


state 33

   12 stmt: assignment_stmt .

    $default  reduce using rule 12 (stmt)


state 34

   13 stmt: expr . SEMICOLON
   47 expr: expr . EQ IDENTIFIER
   48     | expr . NEQ IDENTIFIER
   49     | expr . LT IDENTIFIER
   50     | expr . GT IDENTIFIER
   51     | expr . LEQ IDENTIFIER
   52     | expr . GEQ IDENTIFIER
   53     | expr . DIVIDE IDENTIFIER
   54     | expr . TIMES IDENTIFIER
   55     | expr . MINUS IDENTIFIER
   56     | expr . PLUS IDENTIFIER
   59     | expr . PLUS TERM
   60     | expr . MINUS TERM
   61     | expr . TIMES TERM
   62     | expr . DIVIDE TERM
   63     | expr . EQ TERM
   64     | expr . NEQ TERM
   65     | expr . LT TERM
   66     | expr . GT TERM
   67     | expr . LEQ TERM
   68     | expr . GEQ TERM
   69     | expr . POWER TERM
   70     | expr . AND TERM
   71     | expr . OR TERM
   74     | expr . PLUS LPAREN expr RPAREN
   75     | expr . MINUS LPAREN expr RPAREN
   76     | expr . TIMES LPAREN expr RPAREN
   77     | expr . DIVIDE LPAREN expr RPAREN
   78     | expr . EQ LPAREN expr RPAREN
   79     | expr . NEQ LPAREN expr RPAREN
   80     | expr . LT LPAREN expr RPAREN
   81     | expr . GT LPAREN expr RPAREN
   82     | expr . LEQ LPAREN expr RPAREN
   83     | expr . GEQ LPAREN expr RPAREN
   84     | expr . POWER LPAREN expr RPAREN
   85     | expr . AND LPAREN expr RPAREN
   86     | expr . OR LPAREN expr RPAREN

    EQ         shift, and go to state 64
    NEQ        shift, and go to state 65
    LT         shift, and go to state 66
    GT         shift, and go to state 67
    LEQ        shift, and go to state 68
    GEQ        shift, and go to state 69
    PLUS       shift, and go to state 70
    MINUS      shift, and go to state 71
    TIMES      shift, and go to state 72
    DIVIDE     shift, and go to state 73
    SEMICOLON  shift, and go to state 74
    POWER      shift, and go to state 75
    AND        shift, and go to state 76
    OR         shift, and go to state 77


state 35

   31 func_decl: DATATYPE . IDENTIFIER LPAREN dec_param_list RPAREN LBRACE stmt_list RBRACE
   32          | DATATYPE . IDENTIFIER LPAREN dec_param_list RPAREN SEMICOLON
   41 var_decl: DATATYPE . IDENTIFIER SEMICOLON
   42         | DATATYPE . IDENTIFIER ASSIGN TERM SEMICOLON
   43         | DATATYPE . IDENTIFIER ASSIGN expr SEMICOLON

    IDENTIFIER  shift, and go to state 78


state 36

   45 assignment_stmt: IDENTIFIER ASSIGN . TERM SEMICOLON
   46                | IDENTIFIER ASSIGN . expr SEMICOLON

    NUMBER             shift, and go to state 47
    FLOATING_NUMBER    shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    IDENTIFIER         shift, and go to state 50
    CHARACTER_LITERAL  shift, and go to state 51
    TRUE               shift, and go to state 52
    FALSE              shift, and go to state 53
    LPAREN             shift, and go to state 17
    UNARY              shift, and go to state 19
    NOT                shift, and go to state 20

    func_call  go to state 30
    expr       go to state 79
    TERM       go to state 80


state 37

   33 func_call: IDENTIFIER LPAREN . call_param_list RPAREN
   34          | IDENTIFIER LPAREN . RPAREN

    NUMBER             shift, and go to state 47
    FLOATING_NUMBER    shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    IDENTIFIER         shift, and go to state 50
    CHARACTER_LITERAL  shift, and go to state 51
    TRUE               shift, and go to state 52
    FALSE              shift, and go to state 53
    LPAREN             shift, and go to state 17
    RPAREN             shift, and go to state 81
    UNARY              shift, and go to state 19
    NOT                shift, and go to state 20

    func_call        go to state 30
    call_param_list  go to state 82
    expr             go to state 83
    TERM             go to state 84


state 38

   58 expr: IDENTIFIER UNARY .

    $default  reduce using rule 58 (expr)


state 39

   20 if_stmt: IF LPAREN . expr RPAREN LBRACE stmt_list RBRACE
   21        | IF LPAREN . expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE

    IDENTIFIER  shift, and go to state 50
    LPAREN      shift, and go to state 17
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    func_call  go to state 30
    expr       go to state 85


state 40

   22 while_stmt: WHILE LPAREN . expr RPAREN LBRACE stmt_list RBRACE

    IDENTIFIER  shift, and go to state 50
    LPAREN      shift, and go to state 17
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    func_call  go to state 30
    expr       go to state 86


state 41

   23 repeat_stmt: REPEAT LBRACE . stmt_list RBRACE UNTIL LPAREN expr RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    REPEAT      shift, and go to state 4
    FOR         shift, and go to state 5
    SWITCH      shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    CONST       shift, and go to state 9
    INT         shift, and go to state 10
    FLOAT       shift, and go to state 11
    BOOL        shift, and go to state 12
    STRING      shift, and go to state 13
    CHAR        shift, and go to state 14
    VOID        shift, and go to state 15
    RETURN      shift, and go to state 16
    LPAREN      shift, and go to state 17
    LBRACE      shift, and go to state 18
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    $default  reduce using rule 3 (stmt_list)

    stmt_list        go to state 87
    stmt             go to state 22
    return_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    repeat_stmt      go to state 26
    for_stmt         go to state 27
    switch_stmt      go to state 28
    func_decl        go to state 29
    func_call        go to state 30
    var_decl         go to state 31
    const_decl       go to state 32
    assignment_stmt  go to state 33
    expr             go to state 34
    DATATYPE         go to state 35


state 42

   24 for_stmt: FOR LPAREN . var_decl expr SEMICOLON IDENTIFIER ASSIGN expr RPAREN LBRACE stmt_list RBRACE

    INT     shift, and go to state 10
    FLOAT   shift, and go to state 11
    BOOL    shift, and go to state 12
    STRING  shift, and go to state 13
    CHAR    shift, and go to state 14
    VOID    shift, and go to state 15

    var_decl  go to state 88
    DATATYPE  go to state 89


state 43

   25 switch_stmt: SWITCH LPAREN . expr RPAREN LBRACE case_list RBRACE

    IDENTIFIER  shift, and go to state 50
    LPAREN      shift, and go to state 17
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    func_call  go to state 30
    expr       go to state 90


state 44

   15 stmt: BREAK SEMICOLON .

    $default  reduce using rule 15 (stmt)


state 45

   16 stmt: CONTINUE SEMICOLON .

    $default  reduce using rule 16 (stmt)


state 46

   44 const_decl: CONST DATATYPE . IDENTIFIER ASSIGN TERM SEMICOLON

    IDENTIFIER  shift, and go to state 91


state 47

   90 TERM: NUMBER .

    $default  reduce using rule 90 (TERM)


state 48

   95 TERM: FLOATING_NUMBER .

    $default  reduce using rule 95 (TERM)


state 49

   94 TERM: STRING_LITERAL .

    $default  reduce using rule 94 (TERM)


state 50

   33 func_call: IDENTIFIER . LPAREN call_param_list RPAREN
   34          | IDENTIFIER . LPAREN RPAREN
   58 expr: IDENTIFIER . UNARY
   88     | IDENTIFIER .

    LPAREN  shift, and go to state 37
    UNARY   shift, and go to state 38

    $default  reduce using rule 88 (expr)


state 51

   93 TERM: CHARACTER_LITERAL .

    $default  reduce using rule 93 (TERM)


state 52

   91 TERM: TRUE .

    $default  reduce using rule 91 (TERM)


state 53

   92 TERM: FALSE .

    $default  reduce using rule 92 (TERM)


state 54

   19 return_stmt: RETURN expr .
   47 expr: expr . EQ IDENTIFIER
   48     | expr . NEQ IDENTIFIER
   49     | expr . LT IDENTIFIER
   50     | expr . GT IDENTIFIER
   51     | expr . LEQ IDENTIFIER
   52     | expr . GEQ IDENTIFIER
   53     | expr . DIVIDE IDENTIFIER
   54     | expr . TIMES IDENTIFIER
   55     | expr . MINUS IDENTIFIER
   56     | expr . PLUS IDENTIFIER
   59     | expr . PLUS TERM
   60     | expr . MINUS TERM
   61     | expr . TIMES TERM
   62     | expr . DIVIDE TERM
   63     | expr . EQ TERM
   64     | expr . NEQ TERM
   65     | expr . LT TERM
   66     | expr . GT TERM
   67     | expr . LEQ TERM
   68     | expr . GEQ TERM
   69     | expr . POWER TERM
   70     | expr . AND TERM
   71     | expr . OR TERM
   74     | expr . PLUS LPAREN expr RPAREN
   75     | expr . MINUS LPAREN expr RPAREN
   76     | expr . TIMES LPAREN expr RPAREN
   77     | expr . DIVIDE LPAREN expr RPAREN
   78     | expr . EQ LPAREN expr RPAREN
   79     | expr . NEQ LPAREN expr RPAREN
   80     | expr . LT LPAREN expr RPAREN
   81     | expr . GT LPAREN expr RPAREN
   82     | expr . LEQ LPAREN expr RPAREN
   83     | expr . GEQ LPAREN expr RPAREN
   84     | expr . POWER LPAREN expr RPAREN
   85     | expr . AND LPAREN expr RPAREN
   86     | expr . OR LPAREN expr RPAREN

    EQ      shift, and go to state 64
    NEQ     shift, and go to state 65
    LT      shift, and go to state 66
    GT      shift, and go to state 67
    LEQ     shift, and go to state 68
    GEQ     shift, and go to state 69
    PLUS    shift, and go to state 70
    MINUS   shift, and go to state 71
    TIMES   shift, and go to state 72
    DIVIDE  shift, and go to state 73
    POWER   shift, and go to state 75
    AND     shift, and go to state 76
    OR      shift, and go to state 77

    $default  reduce using rule 19 (return_stmt)


state 55

   18 return_stmt: RETURN TERM .

    $default  reduce using rule 18 (return_stmt)


state 56

   47 expr: expr . EQ IDENTIFIER
   48     | expr . NEQ IDENTIFIER
   49     | expr . LT IDENTIFIER
   50     | expr . GT IDENTIFIER
   51     | expr . LEQ IDENTIFIER
   52     | expr . GEQ IDENTIFIER
   53     | expr . DIVIDE IDENTIFIER
   54     | expr . TIMES IDENTIFIER
   55     | expr . MINUS IDENTIFIER
   56     | expr . PLUS IDENTIFIER
   59     | expr . PLUS TERM
   60     | expr . MINUS TERM
   61     | expr . TIMES TERM
   62     | expr . DIVIDE TERM
   63     | expr . EQ TERM
   64     | expr . NEQ TERM
   65     | expr . LT TERM
   66     | expr . GT TERM
   67     | expr . LEQ TERM
   68     | expr . GEQ TERM
   69     | expr . POWER TERM
   70     | expr . AND TERM
   71     | expr . OR TERM
   73     | LPAREN expr . RPAREN
   74     | expr . PLUS LPAREN expr RPAREN
   75     | expr . MINUS LPAREN expr RPAREN
   76     | expr . TIMES LPAREN expr RPAREN
   77     | expr . DIVIDE LPAREN expr RPAREN
   78     | expr . EQ LPAREN expr RPAREN
   79     | expr . NEQ LPAREN expr RPAREN
   80     | expr . LT LPAREN expr RPAREN
   81     | expr . GT LPAREN expr RPAREN
   82     | expr . LEQ LPAREN expr RPAREN
   83     | expr . GEQ LPAREN expr RPAREN
   84     | expr . POWER LPAREN expr RPAREN
   85     | expr . AND LPAREN expr RPAREN
   86     | expr . OR LPAREN expr RPAREN

    EQ      shift, and go to state 64
    NEQ     shift, and go to state 65
    LT      shift, and go to state 66
    GT      shift, and go to state 67
    LEQ     shift, and go to state 68
    GEQ     shift, and go to state 69
    PLUS    shift, and go to state 70
    MINUS   shift, and go to state 71
    TIMES   shift, and go to state 72
    DIVIDE  shift, and go to state 73
    RPAREN  shift, and go to state 92
    POWER   shift, and go to state 75
    AND     shift, and go to state 76
    OR      shift, and go to state 77


state 57

    2 stmt_list: LBRACE stmt_list . RBRACE stmt_list

    RBRACE  shift, and go to state 93


state 58

   57 expr: UNARY IDENTIFIER .

    $default  reduce using rule 57 (expr)


state 59

   87 expr: NOT LPAREN . expr RPAREN

    IDENTIFIER  shift, and go to state 50
    LPAREN      shift, and go to state 17
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    func_call  go to state 30
    expr       go to state 94


state 60

   72 expr: NOT TERM .

    $default  reduce using rule 72 (expr)


state 61

    0 $accept: stmt_list $end .

    $default  accept


state 62

    1 stmt_list: stmt stmt_list .

    $default  reduce using rule 1 (stmt_list)


state 63

   14 stmt: return_stmt SEMICOLON .

    $default  reduce using rule 14 (stmt)


state 64

   47 expr: expr EQ . IDENTIFIER
   63     | expr EQ . TERM
   78     | expr EQ . LPAREN expr RPAREN

    NUMBER             shift, and go to state 47
    FLOATING_NUMBER    shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    IDENTIFIER         shift, and go to state 95
    CHARACTER_LITERAL  shift, and go to state 51
    TRUE               shift, and go to state 52
    FALSE              shift, and go to state 53
    LPAREN             shift, and go to state 96

    TERM  go to state 97


state 65

   48 expr: expr NEQ . IDENTIFIER
   64     | expr NEQ . TERM
   79     | expr NEQ . LPAREN expr RPAREN

    NUMBER             shift, and go to state 47
    FLOATING_NUMBER    shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    IDENTIFIER         shift, and go to state 98
    CHARACTER_LITERAL  shift, and go to state 51
    TRUE               shift, and go to state 52
    FALSE              shift, and go to state 53
    LPAREN             shift, and go to state 99

    TERM  go to state 100


state 66

   49 expr: expr LT . IDENTIFIER
   65     | expr LT . TERM
   80     | expr LT . LPAREN expr RPAREN

    NUMBER             shift, and go to state 47
    FLOATING_NUMBER    shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    IDENTIFIER         shift, and go to state 101
    CHARACTER_LITERAL  shift, and go to state 51
    TRUE               shift, and go to state 52
    FALSE              shift, and go to state 53
    LPAREN             shift, and go to state 102

    TERM  go to state 103


state 67

   50 expr: expr GT . IDENTIFIER
   66     | expr GT . TERM
   81     | expr GT . LPAREN expr RPAREN

    NUMBER             shift, and go to state 47
    FLOATING_NUMBER    shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    IDENTIFIER         shift, and go to state 104
    CHARACTER_LITERAL  shift, and go to state 51
    TRUE               shift, and go to state 52
    FALSE              shift, and go to state 53
    LPAREN             shift, and go to state 105

    TERM  go to state 106


state 68

   51 expr: expr LEQ . IDENTIFIER
   67     | expr LEQ . TERM
   82     | expr LEQ . LPAREN expr RPAREN

    NUMBER             shift, and go to state 47
    FLOATING_NUMBER    shift, and go to state 48
    STRING_LITERAL     shift, and go to state 49
    IDENTIFIER         shift, and go to state 107
    CHARACTER_LITERAL  shift, and go to state 51
    TRUE               shift, and go to state 52
    FALSE              shift, and go to state 53
    LPAREN             shift, and go to state 108

    TERM  go to state 109


state 69

   52 expr: expr GEQ . IDENTIFIER
   68     | expr GEQ . TERM
   83     | expr GEQ . LPAREN expr RPAREN
